Fix a rendering issue with RasterDecoder

DoCopySubTexture may modifies GL global context state, we need
restore them, otherwise RasterDecoderContextState::context_state
will become dirty.

Bug: 918929
Change-Id: I3d1a506b6410d215baa2e3a3a08db52395f30225
Reviewed-on: https://chromium-review.googlesource.com/c/1403337
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621302}
Former-commit-id: d7aaf7831522612e6e4c947c29eb767e88e271f1